# SignX

./: .coveragerc  .cursorrules  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  AISC_SERVICE_MIGRATION_GUIDE.md  AI_ML_IMPLEMENTATION_SUMMARY.md  API_ENDPOINTS_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  AUTH_SYSTEM_COMPLETE.md  CAD_EXPORT_IMPLEMENTATION_SUMMARY.md  CAD_EXPORT_README.md  CALCUSIGN_INTEGRATION_COMPLETE.md  CLAUDE.md  CODEBASE_INVENTORY.md  CODE_REVIEW_RESOLUTIONS.md  COMMANDS_EXECUTION_STATUS.md  COMPLETION_REPORT.md  DATABASE_SETUP_GUIDE.md  DB_HEALTH_REPORT.md  DEEP_REFACTORING_PLAN.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  EAGLE_SIGN_HANDOFF.md  ELITE_VALIDATION_REPORT.json  EXECUTE_NOW.md  EXECUTIVE_SUMMARY.md  FINAL_COMMAND_REPORT.md  FINAL_SUMMARY.md  FINAL_VALIDATION_COMPLETE.md  FIRST_WEEK_METRICS.md  FLINK_DEVCO_ASSESSMENT.md  FULL_IMPLEMENTATION_STATUS.md  GETTING_STARTED.md  GITHUB_SUCCESS_SUMMARY.md  GIT_SETUP_COMPLETE.md  IMMEDIATE_PRIORITIES.md  (+63 more)
Clone/betterbeam/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
SignX-Intel/: .cursorrules  .gitignore  ARCHITECTURE.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  METRICS.md  PLAYBOOKS.md  PROJECT_SUMMARY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
SignX-Intel/.cursor/rules/: cursorrule.mdc
SignX-Intel/data/raw/: .gitkeep
SignX-Intel/migrations/: env.py
SignX-Intel/scripts/: process_pdfs.ps1  run_tests.ps1  setup.ps1  start_api.ps1  verify_setup.ps1
SignX-Intel/src/signx_intel/: __init__.py  config.py
SignX-Intel/tests/: __init__.py  test_api.py  test_ingestion.py  test_ml.py
apex/: .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
apex/.devcontainer/: devcontainer.json
apex/.github/workflows/: ci.yml
apex/apps/api-service/: pyproject.toml
apex/apps/ui-web/: Dockerfile  FRONTEND-VALIDATION-STATUS.md  MVP-BUILD-STATUS.md  README.md  STATUS_AGENT1_FRONTEND_PRODUCTION.md  VALIDATION-READY.md  index.html  integration-notes.md  integration.md  nginx.conf  package-lock.json  package.json  vite.config.ts
apex/infra/: compose.yaml
apex/infra/docker/: Dockerfile.api  Dockerfile.worker
apex/infra/k8s/: api-deployment.yaml  api-service.yaml
apex/scripts/: smoke.py
apex/services/api/: alembic.ini  pyproject.toml
apex/services/worker/: README.md  pyproject.toml
apex/signcalc/: __init__.py
apex/signcalc/wind/: asce7.py
apex/svcs/orchestrator/: gc.py  main.py
apex/tests/: conftest.py  test_health_ready_pricing.py
apex/tests/e2e/: test_full_flow.py
archive/: AGENT2_FEATURES_COMPLETE.md  AGENT2_ITERATION4_PRODUCTION_COMPLETE.md  AGENT2_PRODUCTION_VALIDATION_COMPLETE.md  AGENT3_SEED_MONITORING_COMPLETE.md  AGENT3_VALIDATION_COMPLETE.md  AGENT_5_FINAL_DELIVERABLE.md  AGENT_5_FINAL_STATUS.md  AGENT_5_ITERATION_3_DELIVERABLE.md  AGENT_5_MISSION_COMPLETE.md  API_FIXES_COMPLETE.md  BUILD_SUMMARY.md  CALCUSIGN_100_PERCENT_COMPLETE.md  CALCUSIGN_APEX_FINAL_SUMMARY.md  CALCUSIGN_FINAL_STATUS.md  CALCUSIGN_STATUS.md  CALCUSIGN_TO_APEX_MAPPING.md  CLEAN_AND_DEPLOY.md  CODEBASE_REVIEW_SUMMARY.md  COMPLETION_SUMMARY.md  DATABASE_COMPLETE.md  DATABASE_OPERATIONAL_COMPLETE.md  DATABASE_VALIDATION_SUMMARY.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT_DOCUMENTATION_COMPLETE.md  DEPLOYMENT_EXECUTION_GUIDE.md  DEPLOYMENT_FIX_NOTES.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_SUMMARY.md  EAGLE-SIGN-HANDOFF.md  FINAL-SIGN-OFF.md  FINAL_COMPLETION.md  FINAL_DEPLOYMENT_READINESS.md  FINAL_EXECUTION_SUMMARY.md  FINAL_INTEGRATION_REPORT.md  FINAL_ITERATION4_COMPLETE.md  FINAL_SESSION_COMPLETE.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  (+27 more)
archive/iterations/: AGENT2_BACKEND_COMPLETE.md  AGENT2_ITERATION2_COMPLETE.md  AGENT2_ITERATION3_COMPLETE.md  AGENT2_ITERATION4_FINAL.md  AGENT3_COMPLETE.md  AGENT3_DATABASE_SUMMARY.md  AGENT3_FINAL_SUMMARY.md  AGENT3_ITERATION2_COMPLETE.md  AGENT3_ITERATION3_FINAL.md  AGENT_5_DELIVERABLE.md  AGENT_5_ITERATION_2_DELIVERABLE.md
services/api/: .dockerignore  ALEMBIC_USAGE.md  BACKEND_IMPLEMENTATION_STATUS.md  CHANGELOG.md  CRITICAL_FEATURES_IMPLEMENTATION.md  Dockerfile  Dockerfile.test  ENVELOPE_MIGRATION_COMPLETE.md  INSA_INTEGRATION.md  JWT_INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  TEST_ENVIRONMENT.md  VITRA_INTEGRATION.md  alembic.ini  baseline_phase3.json  pyproject.toml  pytest.ini  requirements-dev.txt  run-tests-docker.sh
services/api/alembic/: DELETE_OLD_MIGRATIONS.txt  MIGRATION_SQUASH_README.md  env.py
services/api/backups/: README.md  dump.sh
services/api/config/: exposure_factors_v1.yaml  footing_calibration_v1.yaml  pricing_v1.yaml
services/api/migrations/: README.md  refresh_stats_view.sql  test_ddl.py  test_performance_005.py
services/api/monitoring/: README.md  grafana_dashboard.json  postgres_exporter.yml
services/api/scripts/: benchmark_baseline.py  check_referential_integrity.sql  create_monthly_partition.sh  dr_test.sh  generate_test_data.py  load_test_db.sql  pre_deploy_validation.sh  scale_test.sh  seed_aisc_sections.py  seed_defaults.py  seed_estimator_catalog.py
services/api/tests/: QUICKSTART.md  README.md  TESTING_IMPLEMENTATION_SUMMARY.md  conftest.py  test_aisc_database.py  test_file_uploads.py  test_health.py  test_pricing.py  test_projects_crud.py  test_ready_metrics_ratelimit.py
services/ml/: README.md  __init__.py  cost_model.py  data_schema.py  data_validator.py  experiment_tracker.py  pdf_extractor.py  pyproject.toml  structure_graph.py
services/ml/data/: README.md
services/ml/tests/: __init__.py  test_cost_model.py  test_pdf_extractor.py  test_structure_graph.py
services/signcalc-service/: Dockerfile  FIX_NOTES.md  README.md  main.py  pyproject.toml
services/signcalc-service/apex_signcalc/: __init__.py  anchors_baseplate.py  contracts.py  foundation_embed.py  foundation_embed_NEW.py  rebar_schedules.py  report_render.py  sections.py  supports_pipe.py  (+3 more)
services/worker/: .dockerignore  Dockerfile  pyproject.toml
(+1464 files in other folders)
