[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signx-intel"
version = "0.1.0"
description = "Super Intelligent Centralized Cost Database for Sign & Construction Estimating"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "SignX Intelligence", email = "intel@signx.ai"}
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/signx_intel --cov-report=term-missing"
asyncio_mode = "auto"

