[project]
name = "apex-calcusign"
version = "0.1.0"
description = "APEX CalcuSign Engineering Platform"
requires-python = ">=3.11,<3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==4.1.0",
    "pytest-mock==3.14.0",
    "pytest-timeout==2.3.1",
    "pytest-playwright==0.5.4",
    "locust==2.26.1",
    "httpx==0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--cov=services/worker/src",
    "--cov=services/api/src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
    "--asyncio-mode=auto",
]

markers = [
    "asyncio: marks tests as async",
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "monotonicity: marks tests that verify deterministic behavior",
    "idempotency: marks tests that verify idempotent operations",
    "rbac: marks tests that verify authorization",
    "performance: marks tests that verify performance SLOs",
]

asyncio_mode = "auto"

filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["services/worker/src", "services/api/src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

