[project]
name = "signx-ml"
version = "0.1.0"
description = "AI/ML services for SignX-Studio cost prediction and structural optimization"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4.1",
    "xgboost>=2.1.1",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "pydantic>=2.9.2",
    "structlog>=24.4.0",
    "pdfplumber>=0.11.4",
    "mlflow>=2.16.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.12.1",
    "black>=24.10.0",
]

gnn = [
    "torch-geometric>=2.5.3",
]

rapids = [
    # Install via conda: conda install -c rapidsai rapids=24.10
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ["py311"]

