[project]
name = "apex-worker"
version = "0.1.0"
description = "APEX Celery worker"
requires-python = ">=3.11,<3.12"
dependencies = [
    "celery==5.4.0",
    "redis==5.0.4",
    "structlog==24.1.0",
    "pydantic==2.8.2",
    "orjson==3.10.7",
    "pyyaml==6.0.2",
    "reportlab==4.0.0",
    "pillow==10.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.2.2",
    "ruff==0.5.6",
    "mypy==1.11.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

