[package]
name = "betterbeam"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
anyhow = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
pdfium-render = { version = "0.8", features = ["pdfium-lib-bundled"] }
onnxruntime = { version = "0.17", features = ["download-binaries", "directml"] }
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
lru = "0.12"
once_cell = "1.19"
num-traits = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3

